tests/transpiler/x/hs/go_auto.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:07 GMT+7
main :: IO ()
main = do
    print (testpkg.Add 2 3)
    print (testpkg.Pi)
    print (testpkg.Answer)
